maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:42: error: '=' expected but '{' found.
var followPath(cur:Int){
                       ^JediEscaper:66: error: illegal start of simple expression
override def run() {
^